--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@hono/zod-validator": "^0.2.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@t3-oss/env-core": "^0.10.1",
+    "arctic": "^1.9.1",
     "drizzle-orm": "^0.31.2",
     "hono": "^4.4.6",
+    "ky": "^1.3.0",
     "lucia": "^3.2.0",
     "mysql2": "^3.10.1",
     "nanoid": "^5.0.7",
